try to fix wrap

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -281,8 +281,6 @@ pre {
   padding: .5rem;
   font-size: .8rem;
   line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
   word-break: break-all;
   // word-wrap: break-word;
   background-color: $code-background-color;
